BOARD18 2.3.1 Release Notes

Changes from 2.3.0 Release:
Implemented Issue 64 Persistent route to desired page on login
Fixed gimpPythonScript batch script.
Added js.cookie.js script to access-denied page.
Fixed documentation in some javascript scripts.
Added link to Tile/Token Library on webSite index page.

BOARD18 2.3.0 Release Notes

Changes from 2.2.2 Release:
Added gimpPythonScripts directory which contains all such scripts.
Revised BOARD18make to eliminate inclusion of any game boxes in .zip file.
Deprecated loadGameBox.php utility. It is no longer needed.
NOTE: There is no longer a GitHub repository for game boxes.

BOARD18 2.2.2 Release Notes

Changes from 2.2.1 Release:
Fixed some typos in loadGameBox.php
Fixed more typos in board18Boxes.php.

BOARD18 2.2.1 Release Notes

Changes from 2.2.0 Release:
Fixed some typos [due to Bug 58 fix] in log notes. 
Fixed misrouting of game box load messages in board18BoxLoad.php
Fixed two typos in board18Boxes.php.
Upgraded the doLogNote(note) function to handle NULL BD18.welcomename.

BOARD18 2.2.0 Release Notes

Changes from 2.1.3 Release:
Fixed Bug 58 - The doLogNote(note) function is not always used. 
Implemented Issue 27 Part 5 - Provide a tool for loading a 
game box from a zip file. And also make some minor edits that 
prepare for the removal of jqueryMigrate package from BOARD18.

BOARD18 2.1.3 Release Notes

Changes from 2.1.2 Release:
Implemented Issue 57 - Redesigned placement logic for context
menus and token selection canvases.

BOARD18 2.1.2 Release Notes

Changes from 2.1.1  Release:
Fixed Issue 56 - context menus can overlap edge of screen
Also made some documentation changes to comments in code.

BOARD18 2.1.1 Release Notes

Changes from 2.1.0  Release:
Removed some missed scaling code from enhanced support for browser zoom.

BOARD18 2.1.0 Release Notes

Changes from 2.0.0  Release:

* Removed enhanced support for browser zoom. See 
  http://wiki.board18.org/w/Release_2.0.0_Issue