@@ -1,0 +1,50 @@
+<!doctype html>
+<html lang="en">
+<!--
+depricated.html is a nonstandard page that is being used to
+deny payers the ability to create new games in a depricated
+instance if BOARD18. It should be linked to from the "create
+new game" menu item in board18Main.
+
+Copyright (c) 2016 Richard E. Price under the The MIT License.
+A copy of this license can be found in the LICENSE.text file.
+-->
+  <head>
+    <meta charset="utf-8" />
+    <title>BOARD18 - Remote Play Tool For 18xx Style Games</title>
+    <link rel="shortcut icon" href="images/favicon.ico" >
+    <link rel="stylesheet" href="style/board18com.css" />
+    <link rel="stylesheet" href="style/board18Index.css" />
+  </head>
+  <body>
+    
+    <div id="topofpage">
+      <div id="logo">
+        <img src="images/logo.png" alt="Logo"/> 
+      </div>
+      <div id="heading">
+        <h1>BOARD18 - Remote Play Tool For 18xx Style Games</h1>
+      </div>
+    </div>
+    
+    <div id="leftofpage">
+    </div>
+    
+    <div id="rightofpage" style="width: 100%;"> 
+      <div id="content" style="padding-right: 10px">    
+        <p style="font-size: 130%"><b>Welcome to Board18.</b>
+        </p>
+        <p style="font-size: larger">
+          This BOARD18 game site has been deprecated. <br>
+          It should no longer be used to start games.
+        </p>
+        <p>           
+          Please use <a href="http://dev2.board18.org">
+            dev2.board18.org</a> instead.
+        </p>
+      </div>
+    </div>  
+
+  </body>
+</html>
+
